welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: '(' expected but identifier found.
		case _ => if avance;	
                             ^SlugTracking:7: error: illegal start of simple expression
		case _ => if avance;	
                                   ^